--- a/src/config/about.mdx
+++ b/src/config/about.mdx
@@ -1,11 +1,13 @@
 import { OWNER } from "~/config"
-export const title = "Hello, I'm Tarunesh"
 
-<h3 class="my-10 text-xl font-bold">{title}</h3>
-<p>
-  Have fun, if you have any questions you can contact me at
-  <a class="text-blue-500 underline" href={`mailto:${OWNER.email}`}>
-    {OWNER.email}
-  </a>
-  .
-</p>
+### Hello, I'm Tarunesh
+
+This [blog][1] is created using [Astro][2] and deployed using [github pages][3].
+Have fun, if you have any questions you can contact me at [{OWNER.email}](mailto:taruneshkumar1234@gmail.com).
+
+Theme: [Astro Air][4] with less view_transitions and no i18n support.
+
+[1]: https://github.com/tarunxsh/tarunxsh
+[2]: https://astro.build/
+[3]: https://pages.github.com/
+[4]: https://astro.build/themes/details/astro-air/
