chore: regulat updates

--- a/src/config/intro.mdx
+++ b/src/config/intro.mdx
@@ -9,9 +9,8 @@
         </div>
   <div class="basis-2/3 pt-4 sm:px-4 sm:pt-0 text-lg">
     <p>Hi there!</p>
-    <p>I am Tarunesh, a backend software engineer from Delhi, India. I like building things, and I’m currently working with <a class="underline text-blue-500" href="https://simpplr.com">Simpplr</a>, building modern intranet applications.</p>
+    <p>I am Tarunesh, a backend software engineer from Delhi, India. I like building things, and I’m currently inventing with <a class="underline text-blue-500" href="https://albertinvent.com">Albert Invent</a>, helping scientists invent the future..</p>
     <br/>
-    <p>If you want to talk software, I want to talk to you.</p>
-
+    <p>Previously worked with <a class="underline text-blue-500" href="https://simpplr.com">Simpplr</a>, building modern intranet applications and integrations.</p>
   </div>
 </div>
