chore: update about

--- a/src/config/about.mdx
+++ b/src/config/about.mdx
@@ -1,6 +1,26 @@
 import { OWNER } from "~/config"
+import Quote from "~/components/astro/quote.astro"
+import Carousel from "~/components/astro/Carousel.astro"
 
-### Hello, I'm Tarunesh
+### Hey there, I'm Tarunesh
+
+I grew up in India, chasing middle-class dreams and learning to be grateful for everything along the way.
+I’ve been doing computers pretty much all my life and currently working as a software engineer. It is been both my passion and  profession.
+Been enjoying what I do—and if you want to talk code, I’m all ears.
+
+Outside of tech, fitness has become a huge part of my life over the past two years.
+It’s what keeps me growing, glowing, and feeling alive.
+I try to follow the 888 rule: 8 hours of work, 8 hours of life, and 8 hours of sleep.
+It’s not always perfect, but it’s a framework that keeps me balanced.
+
+Sometimes I feel a little lost in space—but in a good way.
+I’m free, and maybe that’s why I feel lost. I never wanted to work the way everyone else did.
+I wanted to be obsessed with what I worked on. That kind of freedom can be chaotic, but honestly, I wouldn’t have it any other way.
+
+<Quote text={"I am free and that is why I am lost."} cite={"Franz Kafka"} />
+<Carousel />
+
+---
 
 This [blog][1] is created using [Astro][2] and deployed using [github pages][3].
 Have fun, if you have any questions you can contact me at [{OWNER.email}](mailto:taruneshkumar1234@gmail.com).
