update: add 8/8/8 link

--- a/src/config/about.mdx
+++ b/src/config/about.mdx
@@ -10,7 +10,7 @@ Been enjoying what I do—and if you want to talk code, I’m all ears.
 
 Outside of tech, fitness has become a huge part of my life over the past two years.
 It’s what keeps me growing, glowing, and feeling alive.
-I try to follow the 888 rule: 8 hours of work, 8 hours of life, and 8 hours of sleep.
+I try to follow the [8/8/8](https://37signals.com/08) rule: 8 hours of work, 8 hours of life, and 8 hours of sleep.
 It’s not always perfect, but it’s a framework that keeps me balanced.
 
 Sometimes I feel a little lost in space—but in a good way.
